# ARC-Core

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ECOSYSTEM.md  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: FUNDING.yml  dependabot.yml  labels.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: 01_bug_report.yml  02_feature_request.yml  03_docs.yml  config.yml
ARC_Console/: requirements.txt
ARC_Console/arc/api/: routes.py
ARC_Console/arc/core/: config.py
ARC_Console/data/: arc_core.db
ARC_Console/data/keys/: receipt_signing.key
ARC_Console/tests/: test_hardware_floor.py  test_v6_ops.py
docs/: BENCHMARKS.md  CONTINUUM_COMPARISON.md  HARDWARE_FLOOR.md  UNIVERSAL_HOST.md
